fix: corrects spacing above donateForTrees button

--- a/src/tenants/salesforce/Home/styles/ClimateAction.module.scss
+++ b/src/tenants/salesforce/Home/styles/ClimateAction.module.scss
@@ -101,6 +101,7 @@
     margin-bottom: 20px;
   }
   .donateForTreesButton {
+    display: inline-block;
     background: $sfBrandBlueDark;
     border-radius: 4px;
     font-family: $primaryFontFamily;
